# Image-Processing

./: .gitignore  CMakeLists.txt  README.md
include/: image.hpp  kernel.hpp  pixel.hpp
resources/: time.py
src/: image.cpp  kernel.cpp  main.cpp
